--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
     "awesome-typescript-loader": "^5.2.1",
+    "eslint": "^7.13.0",
     "fork-ts-checker-webpack-plugin": "^6.0.1",
     "html-webpack-plugin": "^4.5.0",
     "react-refresh": "^0.9.0",
@@ -22,11 +25,11 @@
     "typescript": "^4.0.5",
     "webpack": "4",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "@babel/core": "^7.12.3",
+    "babel-loader": "^8.2.1"
   },
   "dependencies": {
-    "@babel/core": "^7.12.3",
-    "babel-loader": "^8.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
