Added storybook, prettier

--- a/package.json
+++ b/package.json
@@ -6,28 +6,44 @@
   "author": "Devjeet Roy",
   "license": "MIT",
   "scripts": {
-    "start": "yarn webpack serve --mode development --config webpack.config.js",
-    "build": "yarn webpack"
+    "start": "yarn webpack serve --mode development --config webpack.config.js --stats minimal",
+    "build": "yarn webpack",
+    "storybook": "start-storybook -p 6006 --no-dll",
+    "build-storybook": "build-storybook --no-dll"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@storybook/addon-actions": "^6.0.28",
+    "@storybook/addon-essentials": "^6.0.28",
+    "@storybook/addon-links": "^6.0.28",
+    "@storybook/react": "^6.0.28",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.2.1",
     "eslint": "^7.13.0",
+    "eslint-config-airbnb-typescript-prettier": "^3.1.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^6.0.1",
     "html-webpack-plugin": "^4.5.0",
+    "prettier": "^2.1.2",
+    "react-is": "^17.0.1",
     "react-refresh": "^0.9.0",
     "source-map-loader": "^1.1.2",
     "ts-loader": "^8.0.11",
     "typescript": "^4.0.5",
     "webpack": "4",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0",
-    "@babel/core": "^7.12.3",
-    "babel-loader": "^8.2.1"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "react": "^17.0.1",
