--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "preserveConstEnums": true,
     "removeComments": true,
     "sourceMap": true,
-    "target": "es5"
+    "target": "es6",
+    "esModuleInterop": true
   },
-  "include": ["src/index.tsx"]
+  "include": ["src/index.tsx"],
+  "exclude": ["src/stories/**/*"]
 }
