--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Devjeet Roy",
   "license": "MIT",
   "scripts": {
-    "start": "yarn webpack serve --mode development --config webpack.config.js --stats minimal",
-    "build": "yarn webpack",
+    "start": "yarn webpack serve --mode development --config webpack.dev.js --stats minimal",
+    "build": "yarn webpack --mode production --config webpack.prod.js",
     "storybook": "start-storybook -p 6006 --no-dll",
     "build-storybook": "build-storybook --no-dll"
   },
@@ -22,12 +22,9 @@
     "@types/react-dom": "^16.9.9",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
-    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.2.1",
     "eslint": "^7.13.0",
-    "eslint-config-airbnb-typescript-prettier": "^3.1.0",
     "eslint-config-prettier": "^6.15.0",
-    "eslint-config-react-app": "^6.0.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
@@ -43,9 +40,11 @@
     "typescript": "^4.0.5",
     "webpack": "4",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.4.0",
+    "terser-webpack-plugin": "4"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
