--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,11 @@
     "removeComments": true,
     "sourceMap": true,
     "target": "es6",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "declarationDir": "./build/",
+    "declaration": true
   },
-  "include": ["src/index.tsx"],
-  "exclude": ["src/stories/**/*"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["node_modules", "build", "dist"]
 }
