--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,17 @@
     "preserveConstEnums": true,
     "removeComments": true,
     "sourceMap": true,
+    "skipLibCheck": true,
+    "allowJs": true,
+    "strict": true,
     "target": "es6",
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
+    "noFallthroughCasesInSwitch": true,
     "declarationDir": "./build/",
     "declaration": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "include": ["src"],
   "exclude": ["node_modules", "build", "dist"]
 }
