--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
     "react-is": "^17.0.1",
     "react-refresh": "^0.9.0",
     "source-map-loader": "^1.1.2",
+    "terser-webpack-plugin": "4",
     "ts-loader": "^8.0.11",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.0.5",
     "webpack": "4",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.4.0",
-    "terser-webpack-plugin": "4"
+    "webpack-merge": "^5.4.0"
   },
   "peerDependencies": {
     "react": "^17.0.1",
