--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "noImplicitAny": true,
     "outDir": "./build/",
+    "baseUrl": "src",
     "preserveConstEnums": true,
     "removeComments": true,
     "sourceMap": true,
